--- a/careerportfolio.css
+++ b/careerportfolio.css
@@ -370,13 +370,13 @@ img:not(.decor-icon):not(.icon-header img) {
 .screenshot-view {
     /* Significantly increased size for the landscape screenshot */
     max-width: 600px;
-    max-height: 250px; 
+    max-height: 300px; /* Increased height to make text readable */
 }
 
 .book-cover-view {
     /* Significantly increased size for the book cover */
-    max-width: 180px; 
-    height: 250px; 
+    max-width: 200px; 
+    height: 300px; /* Increased height */
 }
 /* --- End Resume Section --- */
 
